src/main/mainStyle.css
 .dark-primary-color    { -fx-background-color: #FBC02D; }
 .default-primary-color { -fx-background-color: #FFEB3B; }
 .light-primary-color   { -fx-background-color: #FFF9C4; }
 .text-primary-color    { -fx-color: #212121; }
 .accent-color          { -fx-background-color: #009688; }
 .primary-text-color    { -fx-color: #212121; }
 .secondary-text-color  { -fx-color: #757575; }
 .divider-color         { -fx-border-color: #BDBDBD; }
 .white-color           { -fx-background-color: #FFFFFF}

  /*Labels*/
  .bold-label{
      -fx-font-weight: bold
  }

  .large-label{
       -fx-font-size: 16;
  }

  .bold-large-label{
          -fx-font-weight: bold;
          -fx-font-size: 16;
  }

  /*Text Field*/
  .glyph-icon {
      -fx-fill: #D34336;
  }

  .jfx-text-field:error, .jfx-password-field:error {
  	-jfx-focus-color: #D34336;
  	-jfx-unfocus-color: #D34336;
  }

  .jfx-text-field .error-label, .jfx-password-field .error-label {
  	-fx-text-fill : #D34336;
  	-fx-font-size: 0.75em;
  }

  /*Snackbar*/
  .jfx-snackbar-content {
  	-fx-background-color: #FFEB3B;
  }

  .jfx-snackbar-transparent-content {
    -fx-background-color: TRANSPARENT;
  }

  .jfx-snackbar-toast {
  	-fx-text-fill: #D34336;
  	-fx-font-weight: bold
  }

  .jfx-snackbar-action {
  	-fx-text-fill: #ff4081;
  }

 /*Buttons*/
 .button-raised{
     -fx-padding: 0.7em 0.57em;
     -fx-font-size: 14 px;
     -fx-button-type: RAISED;
     -fx-background-color: #009688;
     -fx-text-fill: WHITE;
     -fx-background-radius: 40
 }

 .red-button-raised{
      -fx-padding: 0.7em 0.57em;
      -fx-font-size: 14 px;
      -fx-button-type: RAISED;
      -fx-background-color: #e53935;
      -fx-text-fill: WHITE;
      -fx-background-radius: 40
  }

 .red-rect-button-raised{
        -fx-font-size: 14 px;
        -fx-button-type: RAISED;
        -fx-background-color: #E53935;
        -fx-text-fill: WHITE;
        -fx-font-weight: bold
  }

  .yellow-button-flat{
       -fx-font-weight: bold;
       -fx-font-size: 16 px;
       -fx-background-color: #FFEB3B;
       -fx-text-fill: #FFFFFF;
       -fx-background-radius: 40
   }

  .rect-button-raised{
       -fx-font-size: 14 px;
       -fx-button-type: RAISED;
       -fx-background-color: #009688;
       -fx-text-fill: WHITE;
       -fx-font-weight: bold
  }

 /*Hamburger*/
 .white-hamburger > StackPane {
     -fx-background-color: #FFFFFF;
 }

 /*Tabbed Pane*/
 .jfx-tab-pane .headers-region {
     -fx-background-color: #FDD835;
 }

 .jfx-tab-pane .tab-header-background {
     -fx-background-color: #FDD835;
 }

 /*Toolbar*/
 .jfx-tool-bar{
 	-fx-background-color: #FFEB3B;
 }

 .jfx-tool-bar .jfx-rippler {
 	-jfx-rippler-fill: #FBC02D;
 }

/*Drawer List View*/
 .jfx-list-cell {
 	-fx-background-insets: 0.0 ;
 	-fx-text-fill: BLACK;
 }

 .jfx-list-cell:filled:hover,
 .jfx-list-cell:selected .label{
	-fx-text-fill: black;
 }

  .jfx-list-cell .jfx-rippler {
  	-jfx-rippler-fill: #FFEB3B;
  }

  .jfx-list-cell:odd:selected > .jfx-rippler > StackPane,
  .jfx-list-cell:even:selected > .jfx-rippler > StackPane{
 	 -fx-background-color: #FFFFFF;
  }

 .jfx-list-view {
	-fx-background-insets: 0.0;
  	-jfx-cell-horizontal-margin: 0.0;
  	-jfx-cell-vertical-margin: 5.0;
  	-jfx-vertical-gap : 10.0;
  	-jfx-expanded : false;
 }

 /*List View Sublists*/
 .sublist .scroll-bar:vertical .increment-arrow,
 .sublist .scroll-bar:vertical .decrement-arrow,
 .sublist .scroll-bar:vertical .increment-button,
 .sublist .scroll-bar:vertical .decrement-button {
     -fx-padding:0;
 }

 .sublist .scroll-bar:vertical .track,
 .sublist .scroll-bar:vertical .thumb{
     -fx-background-color:WHITE;
 }
 .sublist {
	 -fx-background-color: TRANSPARENT;
 }

 .sublist .jfx-list-cell {
	 -fx-background-insets: 0.0 ;
	 -fx-text-fill: BLACK;
 }

 .sublist-header{
 	-fx-alignment: center-left ;
 }
 .sublist-header .sub-label{
 	-fx-padding: 0 0 0 12;
 }

 /*Questions List View*/
 .custom-jfx-list-view .jfx-list-cell:odd:selected > .jfx-rippler > StackPane,
 .custom-jfx-list-view .jfx-list-cell:even:selected > .jfx-rippler > StackPane{
	 -fx-background-color: #FFEB3B ;
 }

 .custom-jfx-list-view{
 	-jfx-vertical-gap : 10.0;
   	-fx-background-color: transparent;
   	-jfx-expanded: true
 }

 .custom-jfx-list-view .jfx-rippler {
	 -jfx-rippler-fill : #FBC02D;
 }

 .custom-jfx-list-view-icon,
 .jfx-list-cell:selected .label .custom-jfx-list-view-icon {
	 -fx-text-fill: #5264AE;
	 -fx-padding: 0.0 10.0 0.0 5.0  ;
	 -fx-cursor: hand;
 }

 .custom-jfx-list-view .jfx-list-cell:filled:hover .sublist-header > .drop-icon{
	 -fx-background-color: BLACK;
 }



 /*Questions List View (Card View)*/
 .q-list-view {
 	-fx-background-insets: 0;
   	-jfx-cell-horizontal-margin: 0;
   	-jfx-cell-vertical-margin: 0;
   	-jfx-vertical-gap : 0;
   	-fx-background-color: #F4F4F4;
  }

 /*The track for the horizontal and vertical scrollbars*/
 .q-list-view .scroll-bar:horizontal .track,
 .q-list-view .scroll-bar:vertical .track{
 	-fx-background-color:transparent;
 	-fx-border-color:transparent;
 	-fx-background-radius: 0em;
 	-fx-border-radius:2em;
 }

 /* The increment and decrement button CSS class of scrollbar */
 .q-list-view .scroll-bar:horizontal .increment-button ,
 .q-list-view .scroll-bar:horizontal .decrement-button {
     -fx-background-color:transparent;
 	-fx-background-radius: 0em;
 	-fx-padding:0 0 10 0;
 }

 /* The increment and decrement button CSS class of scrollbar */
 .q-list-view .scroll-bar:vertical .increment-button ,
 .q-list-view .scroll-bar:vertical .decrement-button {
     -fx-background-color:transparent;
 	-fx-background-radius: 0em;
 	-fx-padding:0 10 0 0;

 }

 .q-list-view  .scroll-bar .increment-arrow,
 .q-list-view  .scroll-bar .decrement-arrow{
 	-fx-shape:" ";
 	-fx-padding:0;
 }

 /* The main scrollbar **thumb** CSS class which we drag every time (movable) */
 .q-list-view .scroll-bar:horizontal .thumb,
 .q-list-view .scroll-bar:vertical .thumb {
    -fx-background-color: derive(#009688, 50%);
 	-fx-background-insets: 2, 0, 0;
 	-fx-background-radius: 2em;
 }

